@@ -33,7 +33,9 @@ Version 0.6 - TBD
     Now its about 3KB instead of 40+KB. Resolves Issue 22. [GR]
   * Moved compressed files to new compressed dir [OFB]
   * print.css is now also being generated by the compressor ruby script and is available for use.
-  * Added new script 'validate_css.rb' which will validate all css files and present a report with a local java binary of the W3C validator.
+  * Added new script 'validate_css.rb' which will validate all css files and present a report with 
+    a local java binary of the W3C validator.
+  * Created an experimental CSS classes plugin, by popular demand. [OFB]
 	
 
 Version 0.5 - 28/8/2007
